--- a/templates/base/index.html.twig
+++ b/templates/base/index.html.twig
@@ -3,6 +3,10 @@
 {% block title %}{{ parent() }}Page d'accueil{% endblock %}
 
 {% block body %}
+            <div class="pb-2">
+                <img src="{{asset('images/bg_gsb.jpg')}}" style="width:150%" class="img-fluid img-thumbnail" alt="Logo Galaxy Swiss Bourdin">
+            </div>
+
 <div class="container p-4">
     <div class="row">
         <div class="col-lg-4">
